deleted extraneous code from index.js, modified project name and description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node-js-getting-started",
+  "name": "justinyum-backend",
   "version": "0.3.0",
-  "description": "A sample Node.js app using Express 4",
+  "description": "Backend for Justin Yum",
   "engines": {
     "node": "12.x"
   },
