--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "apollo-datasource-rest": "^0.6.6",
+    "apollo-server": "^2.9.9",
     "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "ejs": "^2.5.6",
-    "express": "^4.17.1"
+    "graphql": "^14.5.8",
+    "graphql-tools": "^4.0.6"
   },
   "devDependencies": {
     "request": "^2.81.0",
