--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "apollo-server": "^2.9.9",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
+    "cloudinary": "",
     "cors": "^2.8.5",
     "ejs": "^2.5.6",
     "graphql": "^14.5.8",
