--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^6.4.0",
     "apollo-datasource-rest": "^0.6.6",
     "apollo-server": "^2.9.9",
     "axios": "^0.19.0",
