--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "graphql-tools": "^4.0.6"
   },
   "devDependencies": {
+    "eslint": "^6.7.2",
     "request": "^2.81.0",
     "tape": "^4.7.0"
   },
